--- a/home.html
+++ b/home.html
@@ -26,6 +26,11 @@
             <li><a href="">CAROLS</a></li>
             <li><a href="">DECORATIONS</a></li>
           </ul>
+          <div class="toggle__menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -297,7 +302,7 @@
                 </p>
               </div>
             </div>
-            <div></div>
+          </div>
           </div>
           <div class="tradition__right">
             <div class="tradition__flakes">
@@ -326,7 +331,6 @@
             <p>No spam, we promise!</p>
           </div>
         </div>
-      </div>
     </section>
 
     <!-- CAROLS -->
@@ -506,7 +510,74 @@
         </div>
       </div>
     </section>
-    <!-- DECORATIONS -->
+<!-- DECORATIONS -->
+    <section class="decoration">
+      <div class="container">
+        <div class="decoration__wrapper">
+          <div class="decoration__left">
+            <img src="./IMG/christmas-trees.avif" alt="" />
+            <span>DECORATIONS</span>
+            <h2>Christmas Trees: A Well Decorated History</h2>
+            <small>By: Kathryn Marr</small>
+            <p>
+              Christmas trees are a staple of holiday decorating, illuminating
+              the windows of homes around the world as millions of families hang
+              lights and ornaments from their branches. But where (and when) did
+              the tradition begin?
+            </p>
+          </div>
+        </div>
+            <!-- item 1 -->
+            <div class="item">
+              <img src="./IMG/christmas-ornaments.avif" alt="" />
+              <div class="item__details">
+                <h5>Christmas Ornaments: Their Origins, History and Meaning</h5>
+                <small>By: Leslie Hammond</small>
+              </div>
+            </div>
+            <!-- item 2 -->
+            <div class="item">
+              <img src="./IMG/christmas-lights.avif" alt="" />
+              <div class="item__details">
+                <h5>
+                  Why Christmas Lights are Everywhere (and How They Got There)
+                </h5>
+                <small>By Kathryn Marr</small>
+              </div>
+            </div>
+            <!-- item 3 -->
+            <div class="item">
+              <img src="./IMG/christmas-wreaths.avif" alt="" />
+              <div class="item__details">
+                <h5>
+                  Christmas Wreaths, or "Yule Never Believe what Happened Next"
+                </h5>
+                <small>Bu Leslie Hammond</small>
+              </div>
+            </div>
+            <!-- item 4 -->
+            <div class="item">
+              <img src="./IMG/christmas-stockings.avif" alt="" />
+              <div class="item__details">
+                <h5>Socks or Shoes? Why We Hang Christmas Stockings</h5>
+                <small>By: Kathrun Marr</small>
+              </div>
+            </div>
+            <!-- item 5 -->
+            <div class="item">
+              <img src="./IMG/christmas-sweaters.avif" alt="" />
+              <div class="item__details">
+                <h5>Christmas Sweaters: Horrible Gift or Holiday Couture?</h5>
+                <small>By Felicity Schafer</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+   
+
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -571,5 +642,8 @@
         </div>
       </div>
     </footer>
+
+    <!-- SCRIPT -->
+     <script src="./toggle__menu.js"></script>
   </body>
 </html>
